--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -279,7 +279,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "About Me"
+            "value" : "My"
           }
         },
         "zh-Hans" : {
@@ -515,7 +515,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "FOLLOWERS"
+            "value" : "FANS"
           }
         },
         "zh-Hans" : {
@@ -595,7 +595,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Last Page"
+            "value" : "Previous"
           }
         },
         "zh-Hans" : {
@@ -611,7 +611,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Next Page"
+            "value" : "Next"
           }
         },
         "zh-Hans" : {
@@ -659,7 +659,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "SUBSCRIBES"
+            "value" : "FOLLOWS"
           }
         },
         "zh-Hans" : {
@@ -1029,7 +1029,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "在不登陆的情况下反馈…"
+            "value" : "在不登录的情况下反馈…"
           }
         }
       }
@@ -1063,7 +1063,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "登陆"
+            "value" : "登录"
           }
         }
       }
@@ -1080,7 +1080,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "登陆Darock通行证"
+            "value" : "登录Darock通行证"
           }
         }
       }
@@ -1125,7 +1125,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Two password does not match"
+            "value" : "Password does not match"
           }
         },
         "zh-Hans" : {
@@ -1193,7 +1193,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Unable to connect to Darock server"
+            "value" : "Cannot connect to Darock server"
           }
         },
         "zh-Hans" : {
@@ -1259,7 +1259,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Failed Sending"
+            "value" : "Send Failed"
           }
         },
         "zh-Hans" : {
@@ -1276,7 +1276,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Page Auto Closing in 3sec"
+            "value" : "This page will close in 3s"
           }
         },
         "zh-Hans" : {
@@ -1356,7 +1356,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "#%lld Paused"
+            "value" : "#%lld Aborted"
           }
         },
         "zh-Hans" : {
@@ -1388,7 +1388,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tap to Try Recontinue"
+            "value" : "Tap to Try Re-continue"
           }
         },
         "zh-Hans" : {
@@ -1484,7 +1484,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Before Running into the Problem..."
+            "value" : "Before Error Occurred..."
           }
         },
         "zh-Hans" : {
@@ -1580,7 +1580,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "The error is fatal and Meowbili crashes."
+            "value" : "A fatal error occurred and caused Meowbili crash."
           }
         },
         "zh-Hans" : {
@@ -1628,7 +1628,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "We recommend running Network Troubleshooter"
+            "value" : "Recommend run Network Troubleshooting"
           }
         },
         "zh-Hans" : {
@@ -1708,7 +1708,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "MeowBili Ran into a Problem"
+            "value" : "MeowBili Occurred a Problem"
           }
         },
         "zh-Hans" : {
@@ -1788,7 +1788,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "App crashed in %@."
+            "value" : "App crashed at %@."
           }
         },
         "zh-Hans" : {
@@ -1804,13 +1804,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Continue on Other Devices"
+            "value" : "Continue on iPhone"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "在其他设备上继续"
+            "value" : "在iPhone上继续"
           }
         }
       }
@@ -2013,7 +2013,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Failed to connect to Internet"
+            "value" : "Cannot connect to Internet"
           }
         },
         "zh-Hans" : {
@@ -2077,7 +2077,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Tap Again to Skip This Update"
+            "value" : "Re-Tap to Skip This Update"
           }
         },
         "zh-Hans" : {
@@ -2115,7 +2115,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Linecom"
+            "value" : "澪空"
           }
         }
       }
@@ -2157,13 +2157,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Scan to continue"
+            "value" : "Scan to Login"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "扫描以继续"
+            "value" : "扫描以登录"
           }
         }
       }
@@ -2350,7 +2350,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "start broadcasting"
+            "value" : "started broadcasting"
           }
         },
         "zh-Hans" : {
@@ -2366,7 +2366,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Requires Login"
+            "value" : "Login Required"
           }
         },
         "zh-Hans" : {
@@ -2383,7 +2383,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : " · Uploads Video"
+            "value" : " · Uploaded Video"
           }
         },
         "zh-Hans" : {
@@ -2431,7 +2431,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Switch analysis source when analysis fails"
+            "value" : "Switch analysis source when analysis failed"
           }
         },
         "zh-Hans" : {
@@ -2527,13 +2527,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "When Entering Detail Page"
+            "value" : "When Entered Detail Page"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "当进入详细页时"
+            "value" : "当进入详情页时"
           }
         }
       }
@@ -2543,7 +2543,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "When Video Plays"
+            "value" : "When Video Played"
           }
         },
         "zh-Hans" : {
@@ -2667,7 +2667,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Turn One Screen Time"
+            "value" : "Turn On Screen Time"
           }
         },
         "zh-Hans" : {
@@ -2747,7 +2747,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "No Matching Results"
+            "value" : "No Results"
           }
         },
         "zh-Hans" : {
@@ -3035,7 +3035,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Are you sure?"
+            "value" : "Are you sure to log out?"
           }
         },
         "zh-Hans" : {
@@ -3099,13 +3099,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Update"
+            "value" : "Software Update"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "更新"
+            "value" : "软件更新"
           }
         }
       }
@@ -3211,7 +3211,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Unzipping..."
+            "value" : "Decompressing..."
           }
         },
         "zh-Hans" : {
@@ -3387,7 +3387,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Troubleshooter"
+            "value" : "Troubleshooting"
           }
         },
         "zh-Hans" : {
@@ -3403,13 +3403,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Auto Pop-up"
+            "value" : "Auto Display"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "自动弹出疑难解答"
+            "value" : "自动显示疑难解答"
           }
         }
       }
@@ -3547,7 +3547,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Darock API: Invalid Returns"
+            "value" : "Darock API: Invalid Response"
           }
         },
         "zh-Hans" : {
@@ -3707,7 +3707,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Failed to connect to Bilibili server. The server maybe  crashed."
+            "value" : "Failed to connect to Bilibili server. Bilibili remote server maybe crashed."
           }
         },
         "zh-Hans" : {
@@ -3803,7 +3803,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Apple Watch is currently unable to connect to Internet"
+            "value" : "Apple Watch is currently cannot connect to Internet"
           }
         },
         "zh-Hans" : {
@@ -3819,7 +3819,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Try turning off Wifi and Bluetooth in iPhone's Settings"
+            "value" : "Try to turn off Buletooth and WLAN on iPhone"
           }
         },
         "zh-Hans" : {
@@ -3835,7 +3835,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Check if your watch connects to Internet"
+            "value" : "Ensure your Apple Watch connected to Internet"
           }
         },
         "zh-Hans" : {
@@ -3963,7 +3963,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Darock API's Return is Invalid"
+            "value" : "Darock API's Response Invalid"
           }
         },
         "zh-Hans" : {
@@ -4043,7 +4043,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Checking Update..."
+            "value" : "Checking for Update..."
           }
         },
         "zh-Hans" : {
@@ -4075,7 +4075,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ran into a Problem while Checking Updates"
+            "value" : "An Error Occurred while Checking Updates"
           }
         },
         "zh-Hans" : {
@@ -4091,7 +4091,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Update via iPhone's Testflight"
+            "value" : "Update via Testflight on iPhone"
           }
         },
         "zh-Hans" : {
@@ -4171,7 +4171,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Subscribes"
+            "value" : "Follows"
           }
         },
         "zh-Hans" : {
@@ -4219,7 +4219,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Swipe right and delete will not log out."
+            "value" : "Right swipe and delete will not log out."
           }
         },
         "zh-Hans" : {
@@ -4273,7 +4273,7 @@
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "轻点以登陆"
+            "value" : "轻点以登录"
           }
         }
       }
@@ -4638,7 +4638,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Play in Audio"
+            "value" : "Play as Audio"
           }
         },
         "zh-Hans" : {
