--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4727,7 +4727,21 @@
         }
       }
     },
-    "人机验证已完成" : {
+    "login.captchasucc" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Captcha Completed"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "人机验证已完成"
+          }
+        }
+      }
 
     },
     "令枫" : {
@@ -4778,7 +4792,21 @@
     "可选, 最多9个" : {
 
     },
-    "国际冠字码" : {
+    "login.phonearea" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Area Number"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "区号"
+          }
+        }
+      }
 
     },
     "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
@@ -4835,7 +4863,21 @@
       }
 
     },
-    "手机号" : {
+    "login.phonemunber" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Phone Number"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "手机号"
+          }
+        }
+      }
 
     },
     "navbar.suggest" : {
@@ -4855,22 +4897,92 @@
       }
 
     },
-    "登录" : {
+    "login.login" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Login"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "登录"
+          }
+        }
+      }
 
     },
     "稿件" : {
 
     },
-    "第一步: 手机号信息" : {
+    "login.first" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "First: Phone Info"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "第一步: 手机号信息"
+          }
+        }
+      }
 
     },
-    "第三步: 验证码" : {
+    "login.third" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Third: Verification Code"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "第三步: 验证码"
+          }
+        }
+      }
 
     },
-    "第二步: 人机验证" : {
+    "login.second" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Second: Captcha"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "第二步: 人机验证"
+          }
+        }
+      }
 
     },
-    "获取验证码" : {
+    "login.getcode" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Get Code"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "获取验证码"
+          }
+        }
+      }
 
     },
     "要使用动态小尾巴吗?" : {
@@ -4882,7 +4994,21 @@
     "详情" : {
 
     },
-    "进行人机验证" : {
+    "login.goonver" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Start Captcha"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "进行人机验证"
+          }
+        }
+      }
 
     },
     "选择图片" : {
@@ -4891,7 +5017,21 @@
     "重新载入" : {
 
     },
-    "验证码" : {
+    "login.code" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Verification Code"
+          }
+        },
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "验证码"
+          }
+        }
+      }
 
     },
     "" : {
