--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4797,13 +4797,13 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Area Number"
+            "value" : "Country"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "区号"
+            "value" : "国家"
           }
         }
       }
