--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -161,6 +161,18 @@
         }
       }
     },
+    "%@ 人在看" : {
+
+    },
+    "%@ 弹幕" : {
+
+    },
+    "%@ 播放" : {
+
+    },
+    "%@ 粉丝" : {
+
+    },
     "%@MB / %@MB" : {
       "localizations" : {
         "en" : {
@@ -4758,6 +4770,12 @@
     "动态详情" : {
 
     },
+    "历史记录" : {
+
+    },
+    "发布于 %@" : {
+
+    },
     "发送动态" : {
 
     },
@@ -4807,13 +4825,25 @@
     "我的" : {
 
     },
+    "我的收藏" : {
+
+    },
     "手机号" : {
 
     },
     "推荐" : {
 
     },
+    "清除所有已观看视频" : {
+
+    },
     "登录" : {
+
+    },
+    "离线缓存" : {
+
+    },
+    "稍后再看" : {
 
     },
     "稿件" : {
@@ -4832,6 +4862,9 @@
 
     },
     "要使用动态小尾巴吗?" : {
+
+    },
+    "记录历史记录" : {
 
     },
     "评论" : {
