--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -5065,6 +5065,15 @@
     "推荐" : {
 
     },
+    "显示底部弹幕" : {
+
+    },
+    "显示普通弹幕" : {
+
+    },
+    "显示顶部弹幕" : {
+
+    },
     "普通" : {
 
     },
