Optimized many features

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -4280,6 +4280,9 @@
         }
       }
     },
+    "UID: %@" : {
+
+    },
     "Update.checking" : {
       "localizations" : {
         "en" : {
@@ -4967,6 +4970,9 @@
         }
       }
     },
+    "二维码名片" : {
+
+    },
     "令枫" : {
       "localizations" : {
         "en" : {
@@ -4982,6 +4988,9 @@
           }
         }
       }
+    },
+    "动态" : {
+
     },
     "动态内容" : {
 
@@ -5060,6 +5069,9 @@
 
     },
     "我的收藏" : {
+
+    },
+    "手记建议" : {
 
     },
     "推荐" : {
